<resources>
    <string name="app_name">JungleAndroidCourse</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="notebook">Notebook</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter your password</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="support">Support</string>
    <string name="communicate">Communicate</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="notes_counter">You have %1$d notes</string>
</resources>